teat: added a second message line

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     Testowe repozytorium github
+    Skolonowano repozytorium na inny komputer, wprowadzono i wysłano zmiany na github
   </body>
 </html>
